Major CSS Changes: - Put shared styles into a general "styles.css" - Made all colours into css variables - Added some support for mobile screen sizes - General style improvements - Fixed the bug with the button/link wrapping - Made page buttons/text inline

--- a/nginx/root/static/css/gallery.css
+++ b/nginx/root/static/css/gallery.css
@@ -1,75 +1,10 @@
-/* Fancy background image*/
-:root {
-    background-image: url("../img/NPLB-Background.jpeg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-
 body {
     padding: 0;
     margin: 0;
 }
 
-/* Application logo styling */
-header>div>img {
-    margin: 0.5em;
-}
-
-header>#company {
-    display: flex;
-    align-items: center;
-    margin-right: auto;
-    color: #8e2e0b;
-    font-size: 3em;
-}
-
-header>div>a {
-    font-size: 1.5em;
-    color: #000000;
-    margin-right: 2em;
-    padding: 0.25em;
-    text-decoration: none;
-    transition: color 0.4s;
-}
-
-header>div>a:hover {
-    color: gray;
-}
-
-/* Flexbox header and styling for logo image and buttons */
-body>header {
-    background-color: #ffffff;
-    display: flex;
-    justify-content: flex-end;
-    flex-wrap: wrap;
-    align-items: center;
-}
-
-main {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-
 main>div {
     margin: 5em 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    background-color: #ffffff;
-    min-width: 25%;
-    padding: 2em;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-}
-
-
-main>.flashes {
-    margin: 0.5em 0;
-    padding: 0em;
 }
 
 form {
@@ -89,91 +24,40 @@ form>div {
     padding: 1em;
 }
 
-.item {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-top: 0.5em;
-    padding-bottom: 0.5em;
-    min-height: 1em;
-}
-
-.item:nth-child(even) {
-    background-color: #c5c5c5;
-}
-
-.item:nth-child(odd) {
-    background-color: #f0f1f2;
-}
-
-
-.item>label {
-    width: 25%;
-    margin-left: 1em;
-}
-
-.radioQ {
-    width: 70%;
-    display: flex;
-    justify-content: space-around;
-}
-
-.checkQ {
-    width: 70%;
-    display: flex;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
-}
-
-.checkQ>div {
-    padding: 0.2em;
+#info>* {
+    font-size: large;
+    font-weight: bold;
+    margin: 0.25em 0;
 }
 
 textarea,
 input[type=text] {
     width: 70%;
-    border: 1px solid #000000;
+    border: 1px solid var(--main-dark-colour);
 }
 
 .buttons {
     display: flex;
     justify-content: space-around;
     margin: 3em;
-}
-
-#button {
-    margin: 2em 0em;
-}
-
-button,
-#button>a {
-    padding: 0.5em 2em;
-    align-self: center;
-    color: black;
-    font-weight: normal;
-    text-decoration: none;
-    background-color: #b3cfd1;
-    border: none;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    cursor: pointer;
-    transition: background-color 0.4s;
-}
-
-button:hover,
-#button>a:hover {
-    background-color: pink;
+    flex-direction: row !important;
 }
 
 /* Gallery Stuff */
 
+.top {
+
+    box-shadow: 0px 0px 4px var(--drop-shadow-colour);
+    width: 800px;
+    margin-bottom: 1em;
+}
+
 .infoline {
     display: flex;
+    justify-content: space-between;
     flex-direction: row;
-    align-items: baseline;
-    justify-content: flex-start;
-    align-self: center;
-    padding-left: 1em;
-    width: 500px;
+    width: 80%;
+    margin: auto;
 }
 
 .infoline>* {
@@ -181,17 +65,13 @@ button:hover,
     margin-bottom: 0;
 }
 
-.infoline:first-of-type {
-    justify-content: space-between;
-}
 
 .images {
     display: flex;
     align-items: center;
     justify-content: center;
-    min-height: 400px;
+    min-height: 600px;
     flex-wrap: wrap;
-    border: solid 1px black;
     margin-top: 2em;
     min-width: 532px;
 }
@@ -201,6 +81,10 @@ button:hover,
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.image>img {
+    max-width: 100%;
 }
 
 .buttons {
@@ -216,7 +100,7 @@ button:hover,
 }
 
 .pressed {
-    background-color: #7b9697;
+    background-color: var(--button-pressed-colour);
 }
 
 .bottom {
@@ -227,13 +111,19 @@ button:hover,
     justify-content: space-between;
 }
 
+.bottom>* {
+    box-shadow: 0px 0px 4px var(--drop-shadow-colour);
+    height: 100%;
+}
+
 .stageInformation {
     width: 400px;
+    margin-right: 1em;
 }
 
 .stageButtons {
     display: flex;
-    flex-direction: row;
+    flex-direction: row !important;
     justify-content: space-between;
     margin: 1em;
 }
@@ -247,15 +137,12 @@ button:hover,
     flex-direction: column;
     padding: 0.25em;
     width: 400px;
-    margin-top: 1.5em;
 }
 
 .areaContainer {
     display: flex;
     flex-direction: column;
-    padding: 1em;
-    margin: 0.5em;
-    border: solid 1px black;
+    padding: 0.5em 0;
 }
 
 .areaContainer>label {
@@ -267,8 +154,9 @@ button:hover,
 
 textarea {
     width: 100%;
-    border: none;
     resize: none;
+    align-self: center;
+    border: solid 1px var(--main-dark-colour);
 }
 
 div>select {
@@ -276,7 +164,6 @@ div>select {
 }
 
 .stage {
-    border: black solid 1px;
     padding: 1em;
     margin: 0.5em;
 }
@@ -304,4 +191,51 @@ form>div>div>label {
 form>div>input {
     margin-top: 0.25em;
     margin-bottom: 1em;
+}
+
+@media (max-width: 700px) {
+    .buttons {
+        margin: 0;
+        max-width: 100%;
+        margin: auto;
+        padding: 1em 0em;
+    }
+
+    .buttons>* {
+        padding: 0.25em 1em 0.25em 1em;
+    }
+
+    .stageButtons {
+        margin: 0;
+        max-width: 100%;
+        justify-content: space-around;
+        padding: 1em 0em;
+    }
+
+    .top {
+        width: 100%;
+    }
+
+    .bottom {
+        flex-direction: column;
+        align-items: center;
+        padding: 0;
+        margin: 0;
+        width: 100%;
+    }
+
+    .bottom>* {
+        width: 100%;
+        padding: 0;
+        margin: 0;
+    }
+
+    form>div {
+        padding: 0;
+    }
+
+    .images {
+        min-width: initial;
+        min-height: initial;
+    }
 }
